# twister

./: .gitignore  README.md  index.html  install.sh  io.github.niltonperimneto.Twister.desktop  io.github.niltonperimneto.Twister.metainfo.xml  io.github.niltonperimneto.Twister.yml  meson.build  meson_options.txt  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: build-appimage.yml
docs/: RELEASING.md
poc/: Cargo.toml
poc/src/: main.rs
public/svgs/: svg-lookup.ini
scripts/: build-appimage.sh  fetch_piper_svgs.sh  meson-post-install.sh  sync-version.sh
src/: App.svelte  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clackd_client.rs  commands.rs  dbus_client.rs  dto.rs  lib.rs  main.rs  portal.rs
src/lib/: motion.ts  svg-lookup.ts  types.ts
src/lib/components/: AboutPage.svelte  AppearancePage.svelte  ButtonMapper.svelte  DeviceVisualizer.svelte  DonatePage.svelte  DpiEditor.svelte  Icon.svelte  KeyboardEditor.svelte  KeyboardLayout.svelte  KeyboardLighting.svelte  KeyboardMacros.svelte  KeyboardStatusNotice.svelte  KeycodePicker.svelte  LedEditor.svelte  MouseVisualizer.svelte  PollingRateSelector.svelte  Sidebar.svelte  StatusOverlay.svelte  ThemeSettings.svelte  Titlebar.svelte  WelcomePage.svelte
src/lib/icons/: LICENSES.md  adwaita.ts  breeze.ts  cosmic.ts  default.ts  index.ts  registry.test.ts  types.ts
src/lib/ipc/: commands.ts
src/lib/keyboard/: definitions.ts  layout.test.ts  layout.ts  matrix-grid.ts  model.ts  rgb-matrix-effects.ts
src/lib/keyboard/definitions/: 5087_via_V3_V1.00_20230327.json  M1 QMK V3.json  M1W_V3_VIA_V3_Updated.json  M1W_V5_VIA_V3.json  M1_V5_VIA_V3_ISO.json  M2_V5_VIA_V3.json  M2_via_V2.json  M3 Json File_V3.json  M6_VIA_V3_V1.01.json  NOTICE.md  YU01.json  gmk67.json  m7_via_v3_v1_20230728.json  mod007v3_via.json
src/lib/keycodes/: advanced-keys.ts  index.ts  key-to-byte-v12.ts  keycodes.test.ts  keycodes.ts
src/lib/mouse/: actions.ts  leds.ts
src/lib/stores/: device.svelte.ts  keyboard.svelte.ts  theme.svelte.ts  toast.svelte.ts  updater.svelte.ts
src/lib/themes/: README.md  accent.test.ts  accent.ts  aurora.ts  breeze.ts  color.test.ts  color.ts  compile.test.ts  compile.ts  config.test.ts  config.ts  cosmic.ts  detect.test.ts  detect.ts  index.ts  io.ts  libadwaita.ts  registry.test.ts  types.ts
subprojects/: clackd.wrap  libratbag.wrap
tui-poc/: Cargo.toml
tui-poc/src/: main.rs
