[package]
name = "twister"
version = "0.1.0"
edition = "2024"
description = "Twister — desktop-agnostic gaming mouse configuration GUI for Linux"
license = "GPL-3.0-or-later"
authors = ["Nilton Perim Neto <niltonperimneto@gmail.com>"]

[lib]
name = "twister_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "twister"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
