[package]
name = "twister"
version = "0.1.4"
edition = "2024"
description = "Twister — desktop-agnostic gaming mouse configuration GUI for Linux"
license = "GPL-3.0-or-later"
authors = ["Nilton Perim Neto <niltonperimneto@gmail.com>"]

[[bin]]
name = "twister"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["rt-multi-thread", "sync", "time", "macros"] }
zbus = { version = "5.14", default-features = false, features = ["tokio"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
