[package]
name = "twister"
version = "0.1.6"
edition = "2024"
description = "Twister — desktop-agnostic gaming mouse configuration GUI for Linux"
license = "GPL-3.0-or-later"
authors = ["Nilton Perim Neto <niltonperimneto@gmail.com>"]

[[bin]]
name = "twister"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.11", features = ["custom-protocol"] }
tauri-plugin-shell = "2.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
# Not imported by our code, but tauri::generate_context! expands to
# `::serde_json` paths in this crate — removing it breaks the build.
serde_json = "1.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "sync", "time", "macros"] }
zbus = { version = "5.16", default-features = false, features = ["tokio"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
futures = "0.3"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
